related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Add_Authorized_User__c.field-meta.xml
<CustomField>
    <fullName>Add_Authorized_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Authorized User</label>
    <type>Checkbox</type>
</CustomField>