related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Authorized_User_DOB__c.field-meta.xml
<CustomField>
    <fullName>Authorized_User_DOB__c</fullName>
    <inlineHelpText>Authorized user&apos;s date of birth.</inlineHelpText>
    <label>Authorized User DOB</label>
    <type>Date</type>
</CustomField>