related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Authorized_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorized_User_Name__c</fullName>
    <inlineHelpText>Full name of the authorized user.</inlineHelpText>
    <label>Authorized User Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>