related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Authorized_User_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Authorized_User_Relationship__c</fullName>
    <inlineHelpText>Authorized user&apos;s relationship to the applicant.</inlineHelpText>
    <label>Authorized User Relationship</label>
    <length>40</length>
    <type>Text</type>
</CustomField>