related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Balance_Transfer_Requested__c.field-meta.xml
<CustomField>
    <fullName>Balance_Transfer_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Transfer Requested</label>
    <type>Checkbox</type>
</CustomField>