related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Beneficial_Owners__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owners__c</fullName>
    <label>Beneficial Owners (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>