related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Card_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Product_Name__c</fullName>
    <label>Card / Product Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>