related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Certification_Reconfirmed__c.field-meta.xml
<CustomField>
    <fullName>Certification_Reconfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applicant re-confirmed the certification and credit report authorization.</inlineHelpText>
    <label>Certification Reconfirmed</label>
    <type>Checkbox</type>
</CustomField>