related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status__c</fullName>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
            <value>
                <fullName>Non-Permanent Resident</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>