related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Country_of_Dual_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Dual_Citizenship__c</fullName>
    <label>Country of Dual Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>