related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Different_Statement_Address__c.field-meta.xml
<CustomField>
    <fullName>Different_Statement_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statements Sent to Different Address</label>
    <type>Checkbox</type>
</CustomField>