related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <label>Company Name or Employer</label>
    <length>120</length>
    <type>Text</type>
</CustomField>