related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Estimated_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Payment__c</fullName>
    <label>Estimated Monthly Payment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>