related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Existing_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Existing_Accounts__c</fullName>
    <label>Existing Accounts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>