related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Government_ID_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Expiration__c</fullName>
    <inlineHelpText>Expiration date of the ID.</inlineHelpText>
    <label>Government ID Expiration</label>
    <type>Date</type>
</CustomField>