related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Government_ID_Last4__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Last4__c</fullName>
    <inlineHelpText>Last 4 characters of the ID number only.</inlineHelpText>
    <label>Government ID Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>