related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Government_ID_State__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_State__c</fullName>
    <inlineHelpText>Issuing state of the ID.</inlineHelpText>
    <label>Government ID State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>