related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Government_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Type__c</fullName>
    <inlineHelpText>Type of government-issued ID collected.</inlineHelpText>
    <label>Government ID Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>