related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Gross_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Annual_Income__c</fullName>
    <label>Total Gross Annual Income</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>