related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Membership_Eligibility_Basis__c.field-meta.xml
<CustomField>
    <fullName>Membership_Eligibility_Basis__c</fullName>
    <inlineHelpText>How the applicant qualifies for membership (KB-MEM-001).</inlineHelpText>
    <label>Membership Eligibility Basis</label>
    <length>120</length>
    <type>Text</type>
</CustomField>