related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Membership_Savings_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Membership_Savings_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Membership Savings Account with at least $5 confirmed on file.</inlineHelpText>
    <label>Membership Savings Confirmed</label>
    <type>Checkbox</type>
</CustomField>