related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Monthly_Housing_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Housing_Payment__c</fullName>
    <label>Monthly Housing Payment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>