related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Mothers_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Maiden_Name__c</fullName>
    <label>Mother&apos;s Maiden Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>