related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Number_of_Balances__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Balances__c</fullName>
    <label>Number of Balances to Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>