related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Pending_Items__c.field-meta.xml
<CustomField>
    <fullName>Pending_Items__c</fullName>
    <inlineHelpText>Items still needed from the member after the application was completed.</inlineHelpText>
    <label>Pending Items</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>