related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Primary_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Number__c</fullName>
    <label>Primary Contact Number</label>
    <type>Phone</type>
</CustomField>