related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Primary_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Type__c</fullName>
    <label>Primary Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile phone</fullName>
            </value>
            <value>
                <fullName>Home phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>