related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Qualifying_Member__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Member__c</fullName>
    <inlineHelpText>Name and relationship of the eligible person, for family or household eligibility.</inlineHelpText>
    <label>Qualifying Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>