related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Requested_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Requested_Account_Type__c</fullName>
    <label>Requested Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premier Plus Checking</fullName>
            </value>
            <value>
                <fullName>Premier Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>