related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Selected_Card_Product__c.field-meta.xml
<CustomField>
    <fullName>Selected_Card_Product__c</fullName>
    <inlineHelpText>Card confirmed with the member. The originally applied-for product stays in Card Product Name.</inlineHelpText>
    <label>Selected Card Product</label>
    <length>120</length>
    <type>Text</type>
</CustomField>