related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Income__c</fullName>
    <label>Source of Income</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employment Income</fullName>
            </value>
            <value>
                <fullName>Inheritance/Trust</fullName>
            </value>
            <value>
                <fullName>Investment Income</fullName>
            </value>
            <value>
                <fullName>Retirement Income</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>Unemployment/Other Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>