related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Timeline_Icon__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Icon__c</fullName>
    <description>Icon key shown for this application on the Dealer Timeline component.</description>
    <label>Timeline Icon</label>
    <length>40</length>
    <type>Text</type>
</CustomField>