related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Transfer_2_Account_Last4__c.field-meta.xml
<CustomField>
    <fullName>Transfer_2_Account_Last4__c</fullName>
    <inlineHelpText>Last 4 digits of the second balance transfer account.</inlineHelpText>
    <label>Transfer 2 Account Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>