related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Transfer_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transfer_2_Amount__c</fullName>
    <inlineHelpText>Amount of the second balance transfer.</inlineHelpText>
    <label>Transfer 2 Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>