related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Transfer_2_Institution__c.field-meta.xml
<CustomField>
    <fullName>Transfer_2_Institution__c</fullName>
    <inlineHelpText>Issuer of the second balance to transfer.</inlineHelpText>
    <label>Transfer 2 Institution</label>
    <length>40</length>
    <type>Text</type>
</CustomField>