related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Transfer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Account_Number__c</fullName>
    <label>Transfer Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>