related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Transfer_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Requested_Amount__c</fullName>
    <label>Requested Transfer Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>