related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <label>Work Phone Number</label>
    <type>Phone</type>
</CustomField>