related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Years_in_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Occupation__c</fullName>
    <label>Years in Occupation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>