related/member-portal-agent/force-app/main/default/objects/Application__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>ZIP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>