related/member-portal-agent/force-app/main/default/objects/Application__c/recordTypes/Bank_Card.recordType-meta.xml
<RecordType>
    <fullName>Bank_Card</fullName>
    <active>true</active>
    <description>Generic bank card application record type.</description>
    <label>Bank Card</label>
</RecordType>