related/member-portal-agent/force-app/main/default/objects/Application__c/recordTypes/Commercial_Card.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Card</fullName>
    <active>true</active>
    <description>Commercial card application record type.</description>
    <label>Commercial Card</label>
</RecordType>