related/member-portal-agent/force-app/main/default/objects/Application__c/recordTypes/Commercial_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Onboarding</fullName>
    <active>true</active>
    <description>Business (KYB) onboarding application.</description>
    <label>Commercial Onboarding</label>
</RecordType>