related/member-portal-agent/force-app/main/default/objects/Application__c/recordTypes/Consumer_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Onboarding</fullName>
    <active>true</active>
    <description>Retail deposit-account onboarding application.</description>
    <label>Consumer Onboarding</label>
</RecordType>