related/member-portal-agent/force-app/main/default/objects/Application__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <description>Consumer loan application (auto / home / personal).</description>
    <label>Loan</label>
</RecordType>