related/member-portal-agent/force-app/main/default/objects/Application__c/listViews/Pending_Applications.listView-meta.xml
<ListView>
    <fullName>Pending_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Number__c</columns>
    <columns>Amount__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Decision_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Decision_Status__c</field>
        <operation>notEqual</operation>
        <value>Declined</value>
    </filters>
    <label>Pending Applications</label>
</ListView>